--- a/code/admin/src/pages/users/users.html
+++ b/code/admin/src/pages/users/users.html
@@ -80,8 +80,9 @@
                             </ul>
                         </li>
                         <?php } ?>
-                        <a href="../../../../site/src/index.php">
-                            <i class="fas fa-arrow-alt-circle-left"></i>Torna al sito</a>
+                        <li>
+                            <a href="../../../../site/src/index.php">
+                                <i class="fas fa-arrow-alt-circle-left"></i>Torna al sito</a>
                         </li>
                     </ul>
                 </nav>
@@ -96,13 +97,7 @@
                 <div class="section__content section__content--p30">
                     <div class="container-fluid">
                         <div class="header-wrap">
-                            <form class="form-header" action="" method="POST">
-                                <input class="au-input au-input--xl" type="text" name="search"
-                                    placeholder="Search for datas &amp; reports..." />
-                                <button class="au-btn--submit" type="submit">
-                                    <i class="zmdi zmdi-search"></i>
-                                </button>
-                            </form>
+                            <div></div>
                             <div class="header-button">
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
@@ -132,12 +127,22 @@
                             <div class="col-md-12">
                                 <div class="overview-wrap">
                                     <h2 class="title-1"><i class="zmdi zmdi-accounts-alt"></i> UTENTI</h2>
+                                    <form class="form-header" action="" method="POST" id="search">
+                                        <input class="au-input" type="text" name="search"
+                                            placeholder="Ricerca film per titolo..." id="filter" required
+                                            style="width: 400px;" />
+                                        <button class="au-btn--submit" type="submit">
+                                            <i class="zmdi zmdi-search"></i>
+                                        </button>
+                                    </form>
+                                    <div style="width: 200px;"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="table-responsive table--no-card m-b-30">
+                                    <?php if($totale > 0){ ?>
                                     <table class="table table-borderless table-striped table-earning">
                                         <thead>
                                             <tr>
@@ -231,6 +236,11 @@
                                             ?>
                                         </div>
                                     </div>
+                                    <?php } else { ?>
+                                    <div class="col text-center" style="height: 100px;">
+                                        <h3>Nessun risultato per questa ricerca!</h3>
+                                    </div>
+                                    <?php } ?>
                                 </div>
                             </div>
                         </div>
@@ -268,6 +278,7 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/table.js"></script>
     <script src="../../js/permessi.js"></script>
+    <script src="../../js/search.js"></script>
 
 </body>
 
