--- a/code/site/src/pages/moviesingle/moviesingle.html
+++ b/code/site/src/pages/moviesingle/moviesingle.html
@@ -573,11 +573,11 @@
                                                     for ($i = 1; $i <= $pagine; $i++){
                                                         if($i == $pagina + 1){ 
                                                 ?>
-                                                <a class="active page">
+                                                <a class="active page" style="cursor:pointer">
                                                     <?php echo $i ?>
                                                 </a>
                                                 <?php } else { ?>
-                                                <a class="page">
+                                                <a class="page" style="cursor:pointer">
                                                     <?php echo $i ?>
                                                 </a>
                                                 <?php 	} 
