--- a/code/admin/src/pages/addSerie/addserie.html
+++ b/code/admin/src/pages/addSerie/addserie.html
@@ -97,13 +97,7 @@
                 <div class="section__content section__content--p30">
                     <div class="container-fluid">
                         <div class="header-wrap">
-                            <form class="form-header" action="" method="POST">
-                                <input class="au-input au-input--xl" type="text" name="search"
-                                    placeholder="Search for datas &amp; reports..." />
-                                <button class="au-btn--submit" type="submit">
-                                    <i class="zmdi zmdi-search"></i>
-                                </button>
-                            </form>
+                            <div></div>
                             <div class="header-button">
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
@@ -174,8 +168,7 @@
                                             </div>
                                             <div class="col-2 col-md-2">
                                                 <label class="switch switch-text switch-success">
-                                                    <input type="checkbox" class="switch-input" checked="false"
-                                                        id="completata">
+                                                    <input type="checkbox" class="switch-input" id="completata">
                                                     <span data-on="Si" data-off="No" class="switch-label"></span>
                                                     <span class="switch-handle"></span>
                                                 </label>
