--- a/code/admin/src/pages/addFilm/addfilm.html
+++ b/code/admin/src/pages/addFilm/addfilm.html
@@ -149,7 +149,7 @@
                                                         style="aspect-ratio: 2/3; max-width: 250px;">
                                                 </label>
                                                 <input name="copertina" class="form-control-file" type="file"
-                                                    style="display: none;" id="fotoInput" accept=".jpg, .jpeg">
+                                                    style="display: none;" id="fotoInput" accept=".jpg, .jpeg, .png">
                                             </div>
                                         </div>
                                         <div class="row form-group">
