--- a/code/site/src/pages/profilo/userprofile.html
+++ b/code/site/src/pages/profilo/userprofile.html
@@ -218,7 +218,7 @@
 							<label class="redbtn" for="fotoInput" class="upload-button">
 								Carica immagine
 							</label>
-							<input type="file" style="display: none;" id="fotoInput" accept=".jpg, .jpeg">
+							<input type="file" style="display: none;" id="fotoInput" accept=".jpg, .jpeg, .png">
 						</div>
 						<div class=" user-fav">
 							<p>Le mie sezioni</p>
