--- a/code/admin/src/pages/addCelebrita/addCelebrita.html
+++ b/code/admin/src/pages/addCelebrita/addCelebrita.html
@@ -36,6 +36,8 @@
 </head>
 
 <body class="animsition">
+    <!--toast-->
+    <div id="toast-container"></div>
     <div class="page-wrapper">
         <!-- MENU SIDEBAR-->
         <aside class="menu-sidebar d-none d-lg-block">
@@ -134,9 +136,9 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="card">
-                                <div class="card-body card-block" style="background: #335576">
-                                    <form action="" method="post" enctype="multipart/form-data" class="form-horizontal"
-                                        id="createForm">
+                                <form action="" method="post" enctype="multipart/form-data" class="form-horizontal"
+                                    id="createForm">
+                                    <div class="card-body card-block" style="background: #335576">
                                         <div class="row form-group">
                                             <div class="col col-md-3">
                                                 <label for="fotoInput" class=" form-control-label">
@@ -181,7 +183,7 @@
                                             <div class="col-12 col-md-9">
                                                 <textarea name="descrizione" id="descrizione" rows="15"
                                                     placeholder="Aggiungi una biografia della celebrità"
-                                                    class="form-control"></textarea>
+                                                    class="form-control" required></textarea>
                                             </div>
                                         </div>
                                         <div class="row form-group">
@@ -200,8 +202,7 @@
                                                 </label>
                                             </div>
                                             <div class="col-5 col-md-3">
-                                                <input type="date" id="dataMorte" name="dataMorte" required
-                                                    class="form-control">
+                                                <input type="date" id="dataMorte" name="dataMorte" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row form-group">
@@ -216,25 +217,26 @@
                                                 <small class="help-block form-text">(Valori ammessi: M , F, A)</small>
                                             </div>
                                             <div class="col col-md-3 text-center">
-                                                <label for="data" class=" form-control-label">
+                                                <label for="nazionalita" class=" form-control-label">
                                                     Nazione d'origne*
                                                 </label>
                                             </div>
                                             <div class="col-5 col-md-3">
-                                                <input type="text" id="nazionalita" name="data"
-                                                    placeholder="Nazionalità" required class="form-control">
+                                                <input type="text" id="nazionalita" placeholder="Nazione" required
+                                                    class="form-control">
                                             </div>
                                         </div>
-                                    </form>
-                                </div>
-                                <div class="card-footer" style="background: #233a50;">
-                                    <button type="submit" class="btn btn-primary btn-sm" id="submitBtn">
-                                        <i class="fa fa-save"></i> Salva
-                                    </button>
-                                    <button type="reset" class="btn btn-danger btn-sm" id="exitBtn">
-                                        <i class="fa fa-ban"></i> Annulla
-                                    </button>
-                                </div>
+
+                                    </div>
+                                    <div class="card-footer" style="background: #233a50;">
+                                        <button type="submit" class="btn btn-primary btn-sm" id="submitBtn">
+                                            <i class="fa fa-save"></i> Salva
+                                        </button>
+                                        <button type="reset" class="btn btn-danger btn-sm" id="exitBtn">
+                                            <i class="fa fa-ban"></i> Annulla
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
