--- a/code/admin/src/pages/addFilm/addfilm.html
+++ b/code/admin/src/pages/addFilm/addfilm.html
@@ -36,6 +36,7 @@
 </head>
 
 <body class="animsition">
+    <div id="toast-container"></div>
     <div class="page-wrapper">
         <!-- MENU SIDEBAR-->
         <aside class="menu-sidebar d-none d-lg-block">
@@ -134,9 +135,9 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="card">
-                                <div class="card-body card-block" style="background: #335576">
-                                    <form action="" method="post" enctype="multipart/form-data" class="form-horizontal"
-                                        id="createForm">
+                                <form action="" method="post" enctype="multipart/form-data" class="form-horizontal"
+                                    id="createForm">
+                                    <div class="card-body card-block" style="background: #335576">
                                         <div class="row form-group">
                                             <div class="col col-md-3">
                                                 <label for="fotoInput" class=" form-control-label">
@@ -286,16 +287,17 @@
                                         </div>
 
                                         <div class="form-group" id="troupe" style="min-height: 20px;"></div>
-                                    </form>
-                                </div>
-                                <div class="card-footer" style="background: #233a50;">
-                                    <button type="submit" class="btn btn-primary btn-sm" id="submitBtn">
-                                        <i class="fa fa-save"></i> Salva
-                                    </button>
-                                    <button type="reset" class="btn btn-danger btn-sm" id="exitBtn">
-                                        <i class="fa fa-ban"></i> Annulla
-                                    </button>
-                                </div>
+
+                                    </div>
+                                    <div class="card-footer" style="background: #233a50;">
+                                        <button type="submit" class="btn btn-primary btn-sm" id="submitBtn">
+                                            <i class="fa fa-save"></i> Salva
+                                        </button>
+                                        <button type="reset" class="btn btn-danger btn-sm" id="exitBtn">
+                                            <i class="fa fa-ban"></i> Annulla
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
