--- a/code/site/src/pages/moviesingle/moviesingle.html
+++ b/code/site/src/pages/moviesingle/moviesingle.html
@@ -324,6 +324,7 @@
                                                         allowfullscreen>
                                                     </iframe>
                                                 </div>
+                                                <?php if(count($stars) > 0) { ?>
                                                 <!--CAST-->
                                                 <div class="title-hd-sm">
                                                     <h4>Cast</h4>
@@ -333,9 +334,7 @@
                                                 </div>
                                                 <!-- movie cast -->
                                                 <div class="mvcast-item">
-                                                    <?php 
-                                                        foreach($personaggi as $personaggio){ 
-                                                            if($personaggio['star']){ ?>
+                                                    <?php foreach($stars as $personaggio){ ?>
                                                     <div class="cast-it">
                                                         <div class="cast-left">
                                                             <?php
@@ -354,11 +353,11 @@
                                                             <?php echo '... ' . $personaggio['interpreta']; ?>
                                                         </p>
                                                     </div>
-                                                    <?php 
-                                                            }
-                                                        } 
-                                                    ?>
+                                                    <?php } ?>
                                                 </div>
+                                                <?php } ?>
+
+                                                <?php if(count($recensioni) > 0){ ?>
                                                 <div class="title-hd-sm">
                                                     <h4>Recensioni degli utenti</h4>
                                                     <a href="#reviews" class="time link-to-tab">
@@ -401,9 +400,11 @@
                                                 </div>
                                                 <div style="height: 5vh;"></div>
                                                 <?php } ?>
+                                                <?php } ?>
 
                                             </div>
                                             <div class="col-md-4 col-xs-12 col-sm-12">
+                                                <?php if($thereAreRegisti){ ?>
                                                 <div class="sb-it">
                                                     <h6>Regista:</h6>
                                                     <p>
@@ -419,7 +420,9 @@
                                                         ?>
                                                     </p>
                                                 </div>
+                                                <?php } ?>
 
+                                                <?php if($thereAreScrittori){ ?>
                                                 <div class="sb-it">
                                                     <h6>Scrittore:</h6>
                                                     <p>
@@ -435,22 +438,24 @@
                                                         ?>
                                                     </p>
                                                 </div>
+                                                <?php } ?>
 
+                                                <?php if(count($stars) > 0) { ?>
                                                 <div class="sb-it">
                                                     <h6>Stars: </h6>
                                                     <p>
                                                         <?php
                                                             $star = [];
-                                                            foreach ($personaggi as $personaggio) {
-                                                                if ($personaggio['star']) {
-                                                                    $star[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
-                                                                        . $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
-                                                                }
+                                                            foreach ($stars as $personaggio) {
+                                                                $star[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
+                                                                    . $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
                                                             }
                                                             echo implode(', ', $star);
                                                         ?>
                                                     </p>
                                                 </div>
+                                                <?php } ?>
+
                                                 <div class="sb-it">
                                                     <h6>Generi:</h6>
                                                     <p>
@@ -492,6 +497,7 @@
                                     <div id="reviews" class="tab review">
                                         <div class="row">
                                             <div style="height: 5vh;"></div>
+                                            <?php if($numero_recensioni > 0){ ?>
                                             <div class="topbar-filter">
                                                 <p>Trovate <span>
                                                         <?php echo $numero_recensioni?> recensioni
@@ -585,6 +591,11 @@
                                                 ?>
                                             </div>
                                         </div>
+                                        <?php } else { ?>
+                                        <div>
+                                            <h3>Non ci sono ancora recensioni per questo film!</h3>
+                                        </div>
+                                        <?php } ?>
                                     </div>
                                     <div id="cast" class="tab">
                                         <div class="row">
@@ -596,7 +607,7 @@
                                             <div class="mvcast-item">
                                                 <?php 
                                                     foreach($personaggi as $personaggio){ 
-                                                        if($personaggio['ruolo'] === 'Regista' || $personaggio['ruolo'] === 'Scrittore'){
+                                                        if($personaggio['categoria_ruolo'] == 1){
                                                 ?>
                                                 <div class="cast-it">
                                                     <div class="cast-left">
@@ -624,7 +635,7 @@
                                             <div class="mvcast-item">
                                                 <?php 
                                                     foreach($personaggi as $personaggio){ 
-                                                        if($personaggio['ruolo'] === 'Attore'){
+                                                        if($personaggio['categoria_ruolo'] == 2){
                                                 ?>
                                                 <div class="cast-it">
                                                     <div class="cast-left">
@@ -646,13 +657,14 @@
                                                 ?>
                                             </div>
                                             <!-- //== -->
+                                            <?php if($thereAreMembri){ ?>
                                             <div class="title-hd-sm">
                                                 <h4>Troupe</h4>
                                             </div>
                                             <div class="mvcast-item">
                                                 <?php 
                                                     foreach($personaggi as $personaggio){ 
-                                                        if($personaggio['ruolo'] !== 'Regista' && $personaggio['ruolo'] !== 'Scrittore' && $personaggio['ruolo'] !== 'Attore'){
+                                                        if($personaggio['categoria_ruolo'] == 3){
                                                 ?>
                                                 <div class="cast-it">
                                                     <div class="cast-left">
@@ -673,14 +685,17 @@
                                                     } 
                                                 ?>
                                             </div>
+                                            <?php } ?>
                                         </div>
                                     </div>
                                     <div id="moviesrelated" class="tab">
                                         <div class="row">
                                             <div style="height: 5vh;"></div>
+                                            <?php if(count($film_correlati) > 0) { ?>
                                             <?php 
                                                 foreach($film_correlati as $film){
                                                     $personaggi = $personaggiController->getPersonaggiByFilm($film['id']);
+                                                    $stars = getstars($personaggi);
                                             ?>
                                             <div class="movie-item-style-2">
                                                 <?php
@@ -717,6 +732,7 @@
                                                     </p>
                                                     <p>
                                                         <?php
+                                                        if(thereAreRegisti($personaggi)) {
                                                             echo "Regia di: ";
                                                             $registi = [];
                                                             foreach ($personaggi as $personaggio) {
@@ -726,17 +742,26 @@
                                                                 }
                                                             }
                                                             echo implode(', ', $registi);
+                                                        }else{
+                                                            echo "Scritto da: ";
+                                                            $registi = [];
+                                                            foreach ($personaggi as $personaggio) {
+                                                                if ($personaggio['ruolo'] === 'Scrittore') {
+                                                                    $registi[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
+                                                                        . $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
+                                                                }
+                                                            }
+                                                            echo implode(', ', $registi);
+                                                        }
                                                         ?>
                                                     </p>
                                                     <p>
                                                         <?php
                                                             echo "Stars: ";
                                                             $star = [];
-                                                            foreach ($personaggi as $personaggio) {
-                                                                if ($personaggio['star']) {
-                                                                    $star[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
-                                                                        . $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
-                                                                }
+                                                            foreach ($stars as $personaggio) {
+                                                                $star[] = '<a href="../celebritysingle/celebritysingle.php?id=' . $personaggio['id'] . '">'
+                                                                    . $personaggio['nome'] . ' ' . $personaggio['cognome'] . '</a>';
                                                             }
                                                             echo implode(', ', $star);
                                                         ?>
@@ -744,6 +769,13 @@
                                                 </div>
                                             </div>
                                             <div style="height: 5vh;"></div>
+                                            <?php } ?>
+                                            <?php } else {?>
+                                            <div>
+                                                <h3>
+                                                    Non abbiamo trovato film correlati per questo film!
+                                                </h3>
+                                            </div>
                                             <?php } ?>
                                         </div>
                                     </div>
