--- a/code/admin/src/pages/home/home.html
+++ b/code/admin/src/pages/home/home.html
@@ -102,7 +102,7 @@
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
                                         <div class="image">
-                                            <img src="<?php echo $utente['foto'] ? 'data:image/jpeg;base64,' . base64_encode($utente['foto']) : '../../images/icon/avatar-01.jpg'?>"
+                                            <img src="<?php echo 'data:image/jpeg;base64,' . base64_encode($utente['foto']) ?>"
                                                 alt="Foto profilo" />
                                         </div>
                                         <div class="content">
